<?xml version="1.0" encoding="utf-8"?>
<!--
this is for the course filter activity bottom navigation view
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_back"
        android:icon="@drawable/ic_back_white_24dp"
        android:checkable="false"
        android:title="@string/title_back" />
    <item
        android:id="@+id/navigation_reset"
        android:icon="@drawable/ic_reset_black_24dp"
        android:checkable="false"
        android:title="@string/title_reset" />
    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_black_24dp"
        android:checkable="false"
        android:title="@string/title_list" />


    <item
        android:id="@+id/navigation_done"
        android:icon="@drawable/ic_done_black_24dp"
        android:checkable="false"
        android:title="@string/title_done" />

</menu>

