...
            android:layout_below="@+id/title"
            android:layout_marginTop="-4dp"
            android:text="@string/register_crn_msg"
            android:textColor="@color/darkText" />

        <Button
            android:id="@+id/popUpMsgButtonCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_below="@+id/line1"
            android:text="@string/cancel" />


        <Button
            android:id="@+id/popUpMsgButtonOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title"
            android:layout_below="@+id/line1"
            android:text="@string/ok" />

...
