...

        android:textColor="@color/darkText"
        android:text="" />


    <Button
        android:id="@+id/dialogButtonCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text=" Cancel "
        android:layout_margin="5dp"

        android:layout_below="@+id/line8"

        />


        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/line1"

            android:layout_alignTop="@+id/dialogButtonCancel"
            android:text=" Ok " />
...
