<resources>

    <string name="app_name">Master</string>
    <string name="action_settings">Settings</string>
    <string name="Student_ID">Enter student ID</string>
    <string name="key_Submit">Submit</string>
    <string name="Button_Login">Login</string>
    <string name="Button_register">Register</string>
    <string name="Password">Enter Password</string>
    <string name="logout_action">Exit</string>
    <string name="button_cal">Cal</string>
    <string name="button_course">Courses</string>

    <string name="log_out_option">Log out</string>
...
