...

    <!--<include-->
        <!--layout="@layout/toolbar_main"-->
        <!--/>-->

    <Button
        android:id="@+id/login_button"
        android:layout_width="233dp"
        android:layout_height="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
